--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,75 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>HelpDesk</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="logo.png">
-  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+<html lang="en" class="dark">
+  <head>
+    <meta charset="utf-8" />
+    <title>RAG Help Desk</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    <!-- Tailwind CDN + plugins -->
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+<script>
+  tailwind.config = {
+    darkMode: "class",
+    theme: {
+      extend: {
+        colors: {
+          /* Base */
+          primary: "#137fec",
+          "primary-foreground": "#ffffff",
+
+          "background-light": "#f6f7f8",
+          "background-dark": "#101922",
+
+          /* NPS: cards, texto, bordes */
+          "card-light": "#FFFFFF",
+          "card-dark": "#1a2734",
+
+          "text-light": "#343A40",
+          "text-dark": "#e5e7eb",
+          "text-secondary-light": "#6C757D",
+          "text-secondary-dark": "#92adc9",
+
+          "border-light": "#e2e8f0",
+          "border-dark": "#324d67",
+
+          /* NPS: donuts/barras */
+          promoter: "#28A745",
+          passive: "#FFC107",
+          detractor: "#DC3545",
+        },
+        fontFamily: { display: ["Inter", "sans-serif"] },
+        borderRadius: {
+          DEFAULT: "0.25rem",
+          lg: "0.5rem",
+          xl: "0.75rem",
+          full: "9999px",
+        },
+      },
+    },
+  };
+</script>
+
+    <!-- Fuentes -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet" />
+
+    <style>
+      .material-symbols-outlined {
+        font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+      }
+    </style>
+  </head>
+  <body class="font-display">
+    <app-root></app-root>
+  </body>
 </html>
